--- a/client/index.html
+++ b/client/index.html
@@ -305,15 +305,12 @@
           </div>
         </div>
         <p class="crisisNote" data-i18n="crisisNote">
-          This app cannot provide crisis support. The numbers shown are
-          based on common services in your region and may not be complete.
-          If they do not work or you are in immediate danger, please
-          contact any local emergency service or a trusted crisis hotline
-          right away.
+          If you feel that you might be in danger, please contact a trusted
+          crisis hotline or your local emergency services right away.
         </p>
         <div class="crisisActions">
           <a
-            href="sms:988"
+            href="tel:988"
             id="crisisHotline"
             class="btnLink"
           >
