--- a/client/index.html
+++ b/client/index.html
@@ -816,17 +816,18 @@
                     id="journalEditMenuDropdown"
                     class="journalEditMenuDropdown hidden"
                   >
-                    <button
-                      id="journalEditButton"
-                      type="button"
-                    >
-                      Edit
-                    </button>
+                    <!-- Reordered: Pin, Edit, Delete -->
                     <button
                       id="journalPinToggleButton"
                       type="button"
                     >
                       Pin
+                    </button>
+                    <button
+                      id="journalEditButton"
+                      type="button"
+                    >
+                      Edit
                     </button>
                     <button
                       id="journalDeleteButton"
