Refactor maintenance section in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -167,20 +167,35 @@
         class="maintenanceShell hidden"
         aria-live="polite"
       >
-        <div class="maintenanceBrand">
-          <div class="logo" aria-hidden="true">
-            <div class="mark" aria-hidden="true"></div>
+        <div class="maintenanceContent">
+          <div class="maintenanceBrand">
+            <div class="logo" aria-hidden="true">
+              <div class="mark" aria-hidden="true"></div>
+            </div>
+            <div class="brandText">
+              <div class="title" data-i18n="appTitle">In tuned</div>
+            </div>
           </div>
-          <div class="brandText">
-            <div class="title" data-i18n="appTitle">In tuned</div>
-          </div>
+          <h2
+            class="maintenanceTitle"
+            data-i18n="maintenanceTitle"
+          >
+            In tuned is temporarily offline
+          </h2>
+          <p
+            id="maintenanceMessage"
+            class="maintenanceMessage"
+            data-i18n="maintenanceMessage"
+          >
+            Site is currently down due to maintenance. We will be back shortly.
+          </p>
+          <p
+            class="maintenanceNote"
+            data-i18n="maintenanceNote"
+          >
+            Thank you for your patience while we finish a few upgrades.
+          </p>
         </div>
-        <p
-          id="maintenanceMessage"
-          class="maintenanceMessage"
-        >
-          Site is currently down due to maintenance. We will be back shortly.
-        </p>
       </div>
 
       <main id="appMain">
